<resources>
    <string name="user_info_title">User Info</string>
    <string name="unknown_user">Unknown User</string>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="event_type">Event type</string>
    <string name="event_date">Event date</string>
    <string name="event_description">Event description</string>
    <string name="event_location">Event location</string>
    <string name="event_name">Event name</string>
    <string name="event_add">Add Event</string>
    <string name="user_login">Login</string>
    <string name="guest_login">Guest</string>
    <string name="hello_maps_fragment">Hello Maps fragment</string>
    <string name="hello_favorites_fragment">Hello favorites fragment</string>
    <string name="hello_timeline_fragment">Hello timeline fragment</string>
    <string name="Favorite_button">Like</string>
    <string name="Photo_view">Photo</string>
    <string name="event_row_edit">Edit</string>
    <string name="event_row_info">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key">dk.itu.moapd.copenhagenbuzz.asjo.PREFERENCE_FILE_KEY</string>


</resources>