<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="40dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/event_name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/baseline_local_activity_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="45dp"
            android:paddingEnd="8dp"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/text_field_event_location"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/event_location"
    app:endIconMode="clear_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_field_event_name"
    app:startIconDrawable="@drawable/outline_add_location_alt_24">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="45dp"
        android:paddingEnd="8dp"
        android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/text_field_event_date"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/event_date"
    app:endIconMode="clear_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_field_event_location"
    app:startIconDrawable="@drawable/outline_edit_calendar_24">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="45dp"
        android:paddingEnd="8dp"
        android:inputType="none"
        android:focusable="false"
        android:clickable="true"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/text_field_event_type"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/event_type"
    app:startIconDrawable="@drawable/outline_bookmark_add_24"
    app:endIconMode="clear_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_field_event_date">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_event_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="45dp"
        android:paddingEnd="8dp"
        android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/text_field_event_description"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/event_description"
    app:endIconMode="clear_text"
    app:hintEnabled="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_field_event_type">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_event_description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_event_photo"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        android:contentDescription="preview of image"
        app:layout_constraintTop_toBottomOf="@id/text_field_event_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/darker_gray"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/button_open_camera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:contentDescription="Open camera"
        android:src="@android:drawable/ic_menu_camera"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@id/image_event_photo"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_add_event"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="31dp"
    android:layout_marginEnd="28dp"
    android:layout_marginBottom="184dp"
    android:contentDescription="@string/event_add"
    android:src="@android:drawable/ic_input_add"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
